<resources>
    <string name="app_name">GeoMapSIG</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="welcome_app"> Convertisseur Coordonnées</string>

    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="lati">Latitude</string>
    <string name="longi">Longitude</string>

    <string name="affichage_resultat">Le resultat est :</string>

    <string name="sexagecimale">Sexagécimale</string>
    <string name="decimal">Decimal</string>

    <string name="buttonConversion">Convertir</string>
    <string name="buttonReset">Reset</string>

    <string name="degres_sexa">Degres</string>
    <string name="minute_sexa">Minutes</string>
    <string name="seconde_sexa">Secondes</string>

    <string name="nav_app_name">GeoMapSIG</string>
    <string name="navDescriptionApp">Convertisseur | Tableau | Carte</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tableau_coordonnees">Tableau Coordonnées</string>
    <string name="villesCellule">Villes</string>
    <string name="sexagecimaleTableau">Sexagecimale</string>
    <string name="decimaleTableau">Decimale</string>
    <string name="latitudeSexagecimaleTableau">Latitude</string>
    <string name="longitudeSexagecimaleTableau">Longitude</string>
    <string name="latitudeDecimaleTableau">Latitude</string>
    <string name="longitudeDecimaleTableau">Longitude</string>
    <string name="welcomeMessage2">GeoMapSIG Application</string>
    <string name="welcomeMessage1">Welcome to</string>
    <string name="logowelcome">logoWelcome</string>
    <string name="point_on_map">Point On Map</string>
    <string name="title_activity_conversion">Conversion</string>
    <string name="title_activity_tableau">Tableau</string>
</resources>
