<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nassim.geomapsig.ConversionFragment">

    <TextView
        android:id="@+id/textApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_app"
        android:textColor="#000000"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textApp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/latitude"
        android:textColor="#FF0000" />


    <EditText
        android:id="@+id/latitude_decimal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textLatitude"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/lati"
        android:inputType="numberDecimal">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/latitude_sexagecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitude_decimal"
        android:layout_marginTop="15dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/degres_latitude"
            android:layout_width="1sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/degres_sexa"
            android:inputType="number|numberDecimal" />

        <EditText
            android:id="@+id/minutes_latitude"
            android:layout_width="1sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/minute_sexa"
            android:inputType="number|numberDecimal" />

        <EditText
            android:id="@+id/secondes_latitude"
            android:layout_width="1sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/seconde_sexa"
            android:inputType="number|numberDecimal" />
    </LinearLayout>

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitude_sexagecimal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/longitude"
        android:textColor="#FF0000" />

    <EditText
        android:id="@+id/longitude_decimal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textLongitude"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/longi"
        android:inputType="numberDecimal">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/longitude_sexagecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/longitude_decimal"
        android:layout_marginTop="12dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/degres_longitude"
            android:layout_width="1sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/degres_sexa"
            android:inputType="number|numberDecimal" />

        <EditText
            android:id="@+id/minutes_longitude"
            android:layout_width="1sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/minute_sexa"
            android:inputType="number|numberDecimal" />

        <EditText
            android:id="@+id/secondes_longitude"
            android:layout_width="1sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/seconde_sexa"
            android:inputType="number|numberDecimal" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/uniteCoordonnée"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/longitude_sexagecimal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:checkedButton="@+id/radio2"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/decimal" />

        <RadioButton
            android:id="@+id/sexagecimale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/sexagecimale" />

    </RadioGroup>

    <Button
        android:id="@+id/Conversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Reset"
        android:layout_toLeftOf="@+id/textLongitude"
        android:layout_toStartOf="@+id/textLongitude"
        android:text="@string/buttonConversion" />

    <TextView
        android:id="@+id/textResultat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Conversion"
        android:layout_alignLeft="@+id/longitude_decimal"
        android:layout_alignRight="@+id/Conversion"
        android:layout_alignStart="@+id/longitude_decimal"
        android:layout_below="@+id/Conversion"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:text="@string/affichage_resultat"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/Reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uniteCoordonnée"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/textLongitude"
        android:layout_toRightOf="@+id/textLongitude"
        android:text="@string/buttonReset" />

    <TextView
        android:id="@+id/affichageResultatLatitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textResultat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/affichageResultatLongitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/affichageResultatLatitude"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textSize="18sp" />

</RelativeLayout>

